# sifive-hifive-barebones

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  linker.ld
image.rom.dir/boot/: limine.cfg
src/: main.c  start.S
